# Vehicle-recognition

./: .Makefile.swp  .classifier.xml.swp  CMakeLists.txt  README.md  RandomForest.cpp  RandomForest1  slidewindow.conf
data/: Featureout.data  Featureoutlabel.label  frontr45train.data  fronttrain.data  fronttrain.label  wheeltrain.data
include/: 1  2.txt  data.h  forest.h  hyperparameters.h  node.h  nodegini.h  nodehyperplane.h  nodeinfogain.h  nodesvm.h  output.txt  output1.txt  pairtree.h  tree.h  utilities.h
label/: class1.txt  class2.txt  class3.txt  confidence1.txt  confidence2.txt  confidence3.txt  confidence9.txt  label1.txt  label3.txt
pic/: 1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  110.txt  111.txt  112.txt  113.txt  117.txt  118.txt  119.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  130.txt  132.txt  135.txt  136.txt  138.txt  139.txt  14.txt  141.txt  143.txt  144.txt  145.txt  (+385 more)
src/: RandomForest.cpp  data.cpp  forest.cpp  node.cpp  nodegini.cpp  nodehyperplane.cpp  nodeinfogain.cpp  pairforest.cpp  pairnode.cpp  pairtree.cpp  slidewindow.conf  tree.cpp  utilities.cpp
tmp/: col.txt  collabel.txt  foutfinal.txt  myconfidence.txt  nonzero.txt  row.txt  rowlabel.txt  testback.label
